## v0.5.1 (21 May 2020)
* Fix exception in started hook

## v0.5.0 (21 May 2020)
* Should fix most deprecation warnings as of release
* Require Pry 0.13
* Fix Pry#_pry_ => #pry_instance deprecation

## v0.4.11 (21 May 2020)
* Special branch for Ruby 2.5
* Fix Pry 0.13+ deprecations and broken `show-stack`