@@ -1,3 +1,5 @@
+* Rename 'show-stack' to 'stack' (#50, #8)
+
 ## v0.5.1 (21 May 2020)
 * Fix exception in started hook
 
